--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ sysinfo = "0.33"          # Для работы с сетевым трафико
 rusqlite = { version = "0.33.0", features = ["bundled"] }
 tokio = { version = "1", features = ["full"] } # Асинхронное программирование
 serde_json = "1.0"
+tokio-postgres = "0.7"
